# s2s

./: .gitignore  README.md
.github/workflows/: ghcr.yml
s2s-vulkan/: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
s2s-vulkan/.github/workflows/: ghcr.yml
s2s-vulkan/docker/: Dockerfile.backend-init  Dockerfile.tts  docker-compose.cpu.yml  docker-compose.nvidia.yml  download-models.sh  entrypoint.sh
s2s-vulkan/scripts/: dev-voice.ps1  download_supertonic.py  start_backends.ps1  start_backends.sh  tts_qwen_server.py  whisper_stt_server.py
s2s-vulkan/src/: config.rs  gpu.rs  main.rs  messages.rs  pipeline.rs
s2s-vulkan/src/audio/: local.rs  mod.rs  pcm.rs
s2s-vulkan/src/io/: mod.rs  realtime.rs  websocket.rs
s2s-vulkan/src/llm/: mod.rs
s2s-vulkan/src/stt/: mod.rs
s2s-vulkan/src/tts/: mod.rs  supertonic.rs  supertonic_helper.rs
s2s-vulkan/src/vad/: mod.rs
s2s-vulkan/web/: .gitignore  Dockerfile  app.js  index.html  nginx.conf  serve.py  styles.css
